test3-clouddesktop/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clouddesktop-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test3-clouddesktop-pod
  strategy: {}
  template:
    metadata:
      labels:
        app: test3-clouddesktop-pod
    spec:
      containers:
        - name: clouddesktop
          image: cosi119/rover-ros-environment:devel-001
          imagePullPolicy: Always 
          securityContext:
            capabilities:
              add: ["NET_ADMIN"]
          ports:
            - name: novnc
              containerPort: 80
            - name: ssh
              containerPort: 2222
            - name: vnc
              containerPort: 5900
            - name: code
              containerPort: 8080
          resources:
            requests:
              cpu: 4
              memory: 2.5Gi
            limits:
              cpu: 8
              memory: 8Gi
          volumeMounts:
            - mountPath: /dev/shm
              name: shm-volume
            - mountPath: /my_ros_data
              name: rospersistent
      volumes:
        - name: shm-volume
          emptyDir:
            medium: Memory
            sizeLimit: 1Gi
        - name: rospersistent
          persistentVolumeClaim:
            claimName: test3-clouddesktop-storage
      restartPolicy: Always
status: {}
